[package]
name = "luminair-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.8"
lambda_http = "0.17.0"
serde = "1.0.219"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
